# turing-machine

./: pyproject.toml
turing_machine/: tm.py
